testdata/rust/04_complex/expected/private=1,protected=1,internal=1,implementation=0.txt
<file path="source.rs">
use std::sync::{Arc, Mutex};
use std::ffi::{c_char, CStr};
use std::future::Future;
use std::pin::Pin;

struct Config {
    name: String,
    version: u32,
    is_validated: bool,
}

struct AnalysisService {
    cache: Arc<Mutex<Vec<String>>>,
    async_processor: Option<Pin<Box<dyn Future<Output = String> + Send>>>,
}

impl AnalysisService {

    fn new() -> Self

    async fn validate_code(&self, code: &str) -> Result<bool, &'static str>

    -fn name_from_code(&self, code: &str) -> String

    ~fn direct_memory_access(&self, ptr: *mut u8, len: usize) -> Option<String>

    -async fn process_cache(&self) -> usize
}

trait AsyncProcessor {
}

impl AsyncProcessor for AnalysisService {

    -type Item = String;

    -type Error = &'static str;

    -async fn process_async(&self, item: Self::Item) -> Result<String, Self::Error>
}

impl FFIData {

    fn new_integer(value: i64) -> Self

    fn get_integer(&self) -> i64

    -fn get_bytes(&self) -> &[u8; 8]
}

-fn main()
</file>
